# BayesiPI

./: .gitignore  AGENTS.md  README.md  pyproject.toml
analysis/: __init__.py  summarize_results.py
benchmark/: __init__.py  benchmark.py  mathlib_adapter.py  sorry_project_adapter.py  toy_problems.py
config/: basic_lean_02_budget.yaml  basic_lean_03_allocation.yaml  basic_lean_03_probe.yaml  default.yaml  real_lean_01_allocation.yaml  real_lean_01_probe.yaml  real_lean_02_allocation.yaml  real_lean_02_direct_full.yaml  real_lean_02_direct_one_shot.yaml  real_lean_02_one_attempt_per_approach.yaml  real_lean_02_prefix10_constrained.yaml  real_lean_02_uniform_constrained.yaml  sorrydb_htpi_allocation.yaml  sorrydb_htpi_direct_probe.yaml
harness/: __init__.py  agents.py  experiment_runner.py  lean_runner.py  logging.py  schemas.py
prompts/: direct_agent.md  pi_initial.md  pi_update.md  worker_agent.md
scripts/: __init__.py  analyze_real_lean_02.py  analyze_real_lean_02_constrained.py  analyze_sorrydb_htpi_pilot.py  audit_real_lean_02_candidates.py  bootstrap.py  discover_real_lean_sources.py  generate_basic_lean_03.py  generate_real_lean_02_candidates.py  ingest_real_lean_tasks.py  prepare_real_lean_02_prefix10_subsets.py  probe_real_lean_02.py  probe_tasks.py  run_direct_probe.py  run_experiment.py  run_real_lean_02_prefix10_all_constrained.sh  run_real_lean_02_prefix10_constrained.sh  run_smoke_test.py  run_sorrydb_htpi_pilot.sh  run_uniform_probe.py  sample_mathlib_real_lean_02.py  sample_mathlib_theorems.py  select_basic_lean_03.py  select_real_lean_01.py  (+3 more)
(+33 files in other folders)
